--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@tailwindcss/vite": "^4.0.14",
+    "firebase": "^11.9.0",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.14",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.2.0"
+    "vite": "^6.3.2"
   }
 }
