--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "firebase": "^11.9.0",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.14",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
