--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "@tailwindcss/vite": "^4.0.14",
+    "@tailwindcss/vite": "^4.1.10",
     "firebase": "^11.9.0",
+    "lightningcss": "^1.30.1",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
@@ -22,6 +23,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.3.2"
+    "vite": "^6.3.5"
   }
 }
